# ClusterJudgeSimple

./: .gitignore  ARCHITECTURE_REVIEW.md  README.md  cluster_judge.py  demo_report.html  guidelines.md  guidelines_old.md  pyproject.toml
examples/: recluster_C_GIANT.json  recluster_C_GIANT.txt  report.txt  results.json  run_with_gemini.py
tests/: test_cluster_judge.py
