[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster-judge"
version = "1.0.0"
description = "Weighted distinctiveness evaluator for text clusterings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
progress = ["tqdm"]

[tool.setuptools]
py-modules = ["cluster_judge"]

